tests/tooling/fixtures/native/recovery/negative/negative_octal_literal_parser_invalid_digit.objc3
// Expected diagnostic code(s): O3P103.
module NegativeOctalLiteralParserInvalidDigit;

let value = 0o8;

fn main() -> i32 {
  return 0;
}
